tests/errors/illegal_use_prim_err/illegal_use_prim_err.c
#error illegal_use_prim_err.illegal_use_prim_err:4:11 Illegal use of __discriminant. Hint: `__discriminant Variant`.
#error illegal_use_prim_err.illegal_use_prim_err:5:11 Illegal use of __discriminant. Hint: `__discriminant Variant`.
